--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["MinDong <mdskylover@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pandas = "^1.4.1"
+PyMySQL = "^1.0.2"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
