--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ PyMySQL = "^1.0.2"
 python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
+jupyter = "^1.0.0"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
