--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 pandas = "^1.4.1"
 PyMySQL = "^1.0.2"
 python-dotenv = "^0.20.0"
+pandas-profiling = "^3.1.0"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
