--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ pandas = "^1.4.1"
 PyMySQL = "^1.0.2"
 python-dotenv = "^0.20.0"
 pandas-profiling = "^3.1.0"
+sklearn = "^0.0"
+statsmodels = "^0.13.2"
+seaborn = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
