--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["MinDong <mdskylover@gmail.com>"]
 python = "^3.10"
 requests = "^2.28.1"
 PyYAML = "^6.0"
+pandas = "^1.4.3"
+torch = "^1.12.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
